# nanog91-hackathon

./: README.md
scenario_graphql/: README.md  bgp_template.j2  gql_query.py  pyproject.toml
scenario_nautobot/: README.md  nbhack.clab.yml  pynautobot_example.py
scenario_nautobot/scenario_nautobot/: score.py
