[tool.poetry]
name = "scenario-graphql"
version = "0.1.0"
description = "Hackathon 91 Scenario"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
